Closed Bug 390958 Opened 17 years ago Closed 17 years ago

XPCWrappedNativeScope leaks a WrappedNative2WrapperMap

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sayrer, Assigned: sayrer)

Details

(Keywords: memory-leak)

Attachments

(1 file)

Looks like Blake forgot to get this into the destructor in the patch for bug 367911. (not that I can read that bug ;).

Verified that the patch works using the "leaks" utility that comes with OS X.
Attachment #275271 - Flags: superreview?(brendan)
Attachment #275271 - Flags: review?(brendan)
Comment on attachment 275271 [details] [diff] [review]
delete mWrapperMap

Whoops -- easy fix, thanks for catching this.

/be
Attachment #275271 - Flags: superreview?(brendan)
Attachment #275271 - Flags: superreview+
Attachment #275271 - Flags: review?(brendan)
Attachment #275271 - Flags: review+
Blake says the assert is no good, since he leaves stuff in there on purpose. I'll just take it out.
Attachment #275271 - Flags: review?(mrbkap)
Comment on attachment 275271 [details] [diff] [review]
delete mWrapperMap

Yeah, either the assert has to go or the if (...::IsDyingScope(...)) in XPC_XOW_Finalizer has to go.
Attachment #275271 - Flags: review?(mrbkap) → review+
Comment on attachment 275271 [details] [diff] [review]
delete mWrapperMap

should I need approval1.9 for this? I think not, but I'll go along with it for now...
Attachment #275271 - Flags: approval1.9?
Attachment #275271 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Keywords: mlk
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: