Bug 390958. XPCWrappedNativeScope leaks a WrappedNative2WrapperMap. r=brendan/mrbkap, sr=brendan, a=jst