js/src/xpconnect/src/xpcwrappednativescope.cpp
@@ -268,6 +268,11 @@ XPCWrappedNativeScope::~XPCWrappedNativeScope()
         delete mWrappedNativeProtoMap;
     }
 
+    if(mWrapperMap)
+    {
+        delete mWrapperMap;
+    }
+
     // XXX we should assert that we are dead or that xpconnect has shutdown
     // XXX might not want to do this at xpconnect shutdown time???
     NS_IF_RELEASE(mComponents);
